--- a/css/main.css
+++ b/css/main.css
@@ -5,8 +5,9 @@ body {
     background-size: cover;
     background-attachment: fixed;
     font-family: "Roboto", sans-serif;
+    padding-bottom: 200px;
+    display: block;
 }
-
 
 #main-wrapper {
     position: relative;
@@ -17,6 +18,7 @@ body {
     margin: auto;
     width: 75%;
     margin-top: 15%;
+    margin-bottom: 15%;
 }
 
 .note {
@@ -71,6 +73,14 @@ nav ul li {
     -webkit-transition: all .2s ease-in-out;
     -moz-transition: all .2s ease-in-out;
     transition: all .2s ease-in-out;
+}
+
+#first {
+    margin-right: 30px;
+}
+
+#last {
+    margin-left: 30px;
 }
 
 nav ul li:hover {
